# BA-AX

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: build.yml
src/: lib.rs  main.rs
src/cli/: args.rs  mod.rs  parse.rs
src/extractors/: db.rs  media.rs  mod.rs  zip.rs
src/helpers/: error.rs  mod.rs
